# html2docx

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
html2docx/: __init__.py
tests/: test_converter.py
